# web-3.1

./: Cargo.toml  README.md  package-lock.json  package.json
dnas/web31/workdir/: dna.yaml
dnas/web31/zomes/coordinator/file_storage/: Cargo.toml
dnas/web31/zomes/coordinator/web31/: Cargo.toml
dnas/web31/zomes/coordinator/web31/src/: all_groups.rs  facet_group.rs  facet_group_to_facet_options.rs  facet_option.rs  (+3 more)
dnas/web31/zomes/coordinator/webpage/: Cargo.toml
dnas/web31/zomes/integrity/web31/: Cargo.toml
dnas/web31/zomes/integrity/webpage/: Cargo.toml
tests/: package.json
tests/src/hc_facets/hc_facets/: all-groups.test.ts  common.ts  facet-group-to-facet-options.test.ts  facet-group.test.ts  facet-option-to-facet-values.test.ts  facet-option.test.ts  facet-value.test.ts
tests/src/web31/webpage/: all-webpages.test.ts  common.ts  global-webpages.test.ts  webpage.test.ts
ui/: package.json
ui/public/: global.css
ui/src/: App.svelte  we.ts
ui/src/web31/web31/: AllGroups.svelte  CreateFacetGroup.svelte  CreateFacetOption.svelte  CreateFacetValue.svelte  EditFacetGroup.svelte  EditFacetOption.svelte  EditFacetValue.svelte  FacetGroupDetail.svelte  FacetGroupsForFacetOption.svelte  FacetOptionDetail.svelte  FacetOptionsForFacetGroup.svelte  FacetOptionsForFacetValue.svelte  FacetValueDetail.svelte  FacetValuesForFacetOption.svelte
ui/src/web31/webpage/: AllWebpages.svelte  CreateWebpage.svelte  EditWebpage.svelte  GlobalWebpages.svelte  WebpageDetail.svelte  WebpageRender.svelte  types.ts
we_dev/: config.json
workdir/: happ.yaml  web-happ.yaml
(+6 files in other folders)
